--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li>20250101 조민희</li>
-        <li>20224327 20250520 김성실</li>
+        <li>-20224327 20250520 김성실-</li>
     </ul>
 </body>
 </html>
